eks/cb-operator-guide/files/2.0.1/yaml/sgw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sync-gateway
  template:
    metadata:
      labels:
        app: sync-gateway
    spec:
      containers:
      - name: sync-gateway
        image: couchbase/sync-gateway:2.8.0-enterprise
        volumeMounts:
        - name: config
          mountPath: /etc/sync_gateway
          readOnly: true
        - name: sgw-pv
          mountPath: "/var/log"
      volumes:
      - name: config
        secret:
          secretName: sync-gateway
      - name: sgw-pv
        persistentVolumeClaim:
          claimName: sgw-pvc
