eks/cb-operator-guide/files/2.0.1/yaml/cb-metrics-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchbase-metrics
  labels:
    app: couchbase
spec:
  ports:
  - name: metrics
    port: 9091
    protocol: TCP
  selector:
    app: couchbase
    couchbase_cluster: cbdemo
